--- a/Assets/UI/tabbed-inventory.uss
+++ b/Assets/UI/tabbed-inventory.uss
@@ -11,35 +11,79 @@
     background-color: rgb(178, 126, 67);
 }
 
-/* Style for tabs */
 .unity-tab__header {
     background-color: rgb(229, 223, 223);
     -unity-font-style: bold;
     font-size: 14px;
 }
-    
-/* Adds background color for the selected tab */
-.unity-tab__header:checked  {
+
+.unity-tab__header:checked {
     background-color: rgb(173, 166, 166);
 }
-    
-/* Style for tabContent */
-.tab-content {
 
+.tab-content {
+}
+
+.unity-tab-view__content-container {
+    width: 100%;
+    height: 100%;
 }
 
 .unity-tab__content-container {
-    background-color: rgb(229, 223, 223);
+    width: 100%;
+    height: 100%;
 }
 
 .inventoryTab {
+    background-color: rgb(178, 126, 67);
     align-items: stretch;
+    flex-direction: row;
+    width: 100%;
+    height: 100%;
+}
+/* container which holds all inventory slots*/
+.slotsContainer {
+    flex-grow: 1;
+    justify-content: center;
+    align-items: center; 
+    flex-wrap: wrap;
+    flex-direction: row;
+    height: 25%;
+    background-color: rgba(255, 0, 0, 0);
+    background-size: 100% 100%;
+    max-height: 25%;
+    max-width: 100%;
+    min-height: 25%;
+    min-width: 100%;
+}
+/* container which holds a single inventory item */
+.slotContainer {
+    width: 15%;
+    height: 80%;
+    margin: 2%;
+    background-color: rgb(141, 99, 67);
+    border-width: 1px;
+    border-left-color: rgb(255, 195, 59);
+    border-right-color: rgb(255, 195, 59);
+    border-top-color: rgb(255, 195, 59);
+    border-bottom-color: rgb(255, 195, 59);
+    border-top-left-radius: 3px;
+    border-bottom-left-radius: 3px;
+    border-top-right-radius: 3px;
+    border-bottom-right-radius: 3px;
+}
+
+.slotIcon {
+    padding: 1px;
+    flex-shrink: 1;
+    flex-grow: 1;
+    flex-direction: row;
+    flex-wrap: wrap;
 }
 
 .notebookTab {
-  
 }
 
 .lureTab {
-
 }
+
