--- a/Assets/UI/tabbed-inventory.uss
+++ b/Assets/UI/tabbed-inventory.uss
@@ -41,11 +41,11 @@
     width: 100%;
     height: 100%;
 }
-/* container which holds all inventory slots*/
-.slotsContainer {
+
+.slotsContainer { /* this is the wrapping ve for bait items */
     flex-grow: 1;
     justify-content: center;
-    align-items: center; 
+    align-items: center;
     flex-wrap: wrap;
     flex-direction: row;
     height: 25%;
@@ -56,8 +56,8 @@
     min-height: 25%;
     min-width: 100%;
 }
-/* container which holds a single inventory item */
-.slotContainer {
+
+.slotContainer { /* this is the actual uss for an individual bait container*/
     width: 15%;
     height: 80%;
     margin: 2%;
@@ -81,9 +81,47 @@
     flex-wrap: wrap;
 }
 
+.fishSlotsContainer { /* this is the wrapping ve for fish items - it doesn't actually hold the fish slots !' */
+    flex-grow: 1;
+    /*flex-direction: row;
+    flex-wrap: wrap;
+    justify-content: center;
+    align-items: center;*/
+}
+
+.fishInventoryContainer { /* this just holds all fish inventory slots so they remain within the background image*/
+    flex-grow: 1;
+    flex-direction: row;
+    flex-wrap: wrap;
+    justify-content: flex-start;
+    align-items: center;
+    background-size: 100% 100%;
+    background-position-y: bottom 0;
+    max-height: 80%;
+    height: 80%;
+    min-height: 80%;
+}
+
+.fishSlotContainer { /* this is the actual uss for an individual fish container*/
+    max-width: 15%;
+    max-height: 25%;
+    margin: 2%;
+    background-color: rgb(141, 99, 67);
+    border-width: 1px;
+    border-left-color: rgb(255, 195, 59);
+    border-right-color: rgb(255, 195, 59);
+    border-top-color: rgb(255, 195, 59);
+    border-bottom-color: rgb(255, 195, 59);
+    border-top-left-radius: 3px;
+    border-bottom-left-radius: 3px;
+    border-top-right-radius: 3px;
+    border-bottom-right-radius: 3px;
+}
+
 .notebookTab {
 }
 
 .lureTab {
 }
+
 
