--- a/Assets/UI/tabbed-inventory.uss
+++ b/Assets/UI/tabbed-inventory.uss
@@ -32,9 +32,10 @@
 .unity-tab__content-container {
     width: 100%;
     height: 100%;
+    flex-grow: 1;
 }
-
-.inventoryTab {
+/*start INVENTORY TAB classes*/
+.inventoryTab { 
     background-color: rgb(178, 126, 67);
     align-items: stretch;
     flex-direction: row;
@@ -159,16 +160,35 @@
     border-color: rgb(255, 137, 0);
 }
 
-.selectedSubMenuContainer { /*uss for submenu selection specifically*/
+.selectedSubMenuContainer {
     color: rgb(141, 99, 67);
     background-color: rgb(255, 137, 0);
 }
 
+/*end INVENTORY TAB classes*/
 .notebookTab {
 }
 
 .lureTab {
 }
 
+/*start LURE TAB classes*/
+.lureScrollView {
+    width: 100%;
+    height: 100%;
+    max-width: 100%;
+    max-height: 100%;
+    margin: 2px;
+    padding: 2px;
+    background-image: resource('Sprites/LureSprites/notebook-paper');
+    background-color: rgb(255, 255, 255);
+}
 
-
+.lureSlotContainer {
+    width: 90%;
+    max-height: 150px;
+    margin: 10px auto;
+    background-color: rgba(0, 0, 0, 0);
+    border-width: 1px;
+    border-color: rgb(255, 195, 59);
+}
