--- a/Assets/UI/tabbed-inventory.uss
+++ b/Assets/UI/tabbed-inventory.uss
@@ -34,6 +34,11 @@
     height: 100%;
     flex-grow: 1;
 }
+
+.unity-scroller{
+    visibility: hidden;
+}
+
 /*start INVENTORY TAB classes*/
 .inventoryTab { 
     background-color: rgb(178, 126, 67);
@@ -186,7 +191,7 @@
 
 .lureSlotContainer {
     width: 90%;
-    max-height: 150px;
+    max-height: 100px;
     margin: 10px auto;
     background-color: rgba(0, 0, 0, 0);
     border-width: 1px;
