--- a/Assets/UI/BaitShopUI/shop-inventory.uss
+++ b/Assets/UI/BaitShopUI/shop-inventory.uss
@@ -16,7 +16,6 @@
     flex-grow: 1;
 }
 
-/*start BAIT SHOP classes*/
 .baitShop {
     flex-wrap: wrap;
     height: 100%;
@@ -28,25 +27,20 @@
 
 .wares {
     flex-grow: 1;
-
     max-width: 100%;
     max-height: 60%;
     width: 100%;
     height: 60%;
-
     margin: 3px 3px 3px 3px;
     padding: 5px 5px 5px 5px;
-
-    border-color:rgb(0, 154, 255);
+    border-color: rgb(0, 154, 255);
     border-radius: 2px 2px 2px 2px;
     border-width: 3px 3px 3px 3px;
-
     align-items: center;
     flex-direction: row;
     justify-content: center;
     flex-wrap: wrap;
     flex-shrink: 0;
-
     background-color: rgb(111, 160, 184);
 }
 
@@ -54,24 +48,33 @@
     flex-grow: 0;
     flex-direction: row;
     flex-wrap: wrap;
-
     margin: 3px 3px 3px 3px;
     padding: 5px 5px 5px 5px;
 }
 
-.itemDescription {
-    flex-grow: 0;
+.itemDescriptionBox {
+    width: 60%;
+    height: 95%;
+    margin: 3px;
+    border-color: rgb(255, 255, 255);
+    border-width: 3px 3px 3px 3px;
+    border-radius: 2px 2px 2px 2px;
+    padding: 3px;
+    flex-grow: 1;
 }
 
-.itemDescriptionText {
-    height: 100%;
+.itemName {
+    height: 20%;
+}
+
+.itemDescription {
+    flex-grow: 1;
+    flex-shrink: 1;
 }
 
 .actionBox {
     flex-grow: 1;
 }
-
-/*end BAIT SHOP classes*/
 
 .fishMonger {
     flex-wrap: wrap;
@@ -100,11 +103,11 @@
     flex-grow: 1;
 }
 
-/*multiple-purpose classes*/
 .slotContainer {
     width: 17.5%;
     height: 28.5%;
     margin: 1% auto;
+    padding: 2px;
     background-color: rgb(111, 160, 184);
     border-width: 3px;
     border-color: rgb(0, 154, 255);
