--- a/Assets/UI/BaitShopUI/ShopInventory.uxml
+++ b/Assets/UI/BaitShopUI/ShopInventory.uxml
@@ -5,10 +5,19 @@
             <ui:VisualElement name="Wares" class="wares" style="flex-direction: row; border-left-color: rgb(225, 225, 225); border-right-color: rgb(225, 225, 225); border-top-color: rgb(225, 225, 225); border-bottom-color: rgb(225, 225, 225); align-items: stretch; align-content: flex-start; width: auto; max-width: 100%; margin-top: 0; margin-right: 1px; margin-left: 0; height: 70%; max-height: 70%;" />
             <ui:VisualElement name="Interactables" class="interactables" style="flex-shrink: 0; flex-grow: 1; flex-direction: row; width: auto; background-color: rgb(111, 160, 184); border-left-color: rgb(225, 225, 225); border-right-color: rgb(225, 225, 225); border-top-color: rgb(225, 225, 225); border-bottom-color: rgb(225, 225, 225); border-top-width: 3px; border-right-width: 3px; border-bottom-width: 3px; border-left-width: 3px; margin-top: 3px; margin-right: 1px; margin-bottom: 3px; margin-left: 0; align-self: auto; padding-top: 3px; padding-right: 3px; padding-bottom: 3px; padding-left: 3px; border-top-left-radius: 2px; border-top-right-radius: 2px; border-bottom-right-radius: 2px; border-bottom-left-radius: 2px; height: 30%;">
                 <ui:VisualElement name="ItemDescriptionBox" class="itemDescriptionBox">
-                    <ui:Label text="Label" name="ItemName" class="itemName" style="-unity-font-style: bold; white-space: normal;" />
+                    <ui:Label text="Label" name="ItemName" class="itemName" style="-unity-font-style: bold; white-space: normal; padding-right: 4px; padding-left: 4px; flex-shrink: 1;" />
                     <ui:Label text="Label" name="ItemDescription" class="itemDescription" style="font-size: 10px; white-space: normal;" />
                 </ui:VisualElement>
-                <ui:VisualElement name="ActionBox" class="actionBox" style="border-left-color: rgb(255, 255, 255); border-right-color: rgb(255, 255, 255); border-top-color: rgb(255, 255, 255); border-bottom-color: rgb(255, 255, 255); border-top-width: 3px; border-right-width: 3px; border-bottom-width: 3px; border-left-width: 3px; border-top-left-radius: 3px; border-top-right-radius: 3px; border-bottom-right-radius: 3px; border-bottom-left-radius: 3px; margin-top: 3px; margin-right: 3px; margin-bottom: 3px; margin-left: 3px; height: 95%;" />
+                <ui:VisualElement name="ActionBox" class="actionBox" style="border-left-color: rgb(255, 255, 255); border-right-color: rgb(255, 255, 255); border-top-color: rgb(255, 255, 255); border-bottom-color: rgb(255, 255, 255); border-top-width: 0; border-right-width: 0; border-bottom-width: 0; border-left-width: 0; border-top-left-radius: 3px; border-top-right-radius: 3px; border-bottom-right-radius: 3px; border-bottom-left-radius: 3px; margin-top: 3px; margin-right: 0; margin-bottom: 3px; margin-left: 0; height: 95%; padding-top: 0; padding-right: 3px; padding-bottom: 0; padding-left: 3px;">
+                    <ui:VisualElement name="BuyBox" class="buyBox" style="flex-wrap: wrap; flex-direction: row;">
+                        <ui:Label text="Buy ?" name="BuyText" class="buyText" />
+                        <ui:VisualElement name="OptionNo" class="optionNo" />
+                        <ui:VisualElement name="OptionYes" class="optionYes" />
+                    </ui:VisualElement>
+                    <ui:VisualElement name="MoneyBox" class="moneyBox">
+                        <ui:Label text="0.00$" name="MoneyText" style="flex-wrap: wrap; -unity-text-align: upper-right;" />
+                    </ui:VisualElement>
+                </ui:VisualElement>
             </ui:VisualElement>
         </ui:Tab>
         <ui:Tab label="Fishmonger" name="FishMonger" class="fishMonger">
